kubernetes/kubernetes.headless-vnc.example.deployment.yaml
#### POD config (run one time)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless-vnc
  labels:
    application: headless-vnc
spec:
  # 1 Pods should exist at all times.
  replicas: 1
  selector:
    matchLabels:
      application: headless-vnc
  template:
    metadata:
      labels:
        application: headless-vnc
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: headless-vnc
        image: icsforth/ubuntu-xfce-vnc
        imagePullPolicy: Always
        args:
          ### make normal UI startup to connect via: oc rsh <pod-name> bash
          #- '--tail-log'
        ### checks that vnc server is up and running
        #livenessProbe:
        #  tcpSocket:
        #    port: 5901
        #  initialDelaySeconds: 1
        #  timeoutSeconds: 10
        ### checks if http-vnc connection is working
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 6901
        #    scheme: HTTP
        #  initialDelaySeconds: 1
        #  timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: headless-vnc
  name: headless-vnc
spec:
  externalName: headless-vnc
  ports:
  - name: http-port-tcp
    protocol: TCP
    port: 6901
    targetPort: 6901
  - name: vnc-port-tcp
    protocol: TCP
    port: 5901
    targetPort: 5901
  selector:
    application: headless-vnc
  type: NodePort
# Use type loadbalancer if needed
#  type: LoadBalancer
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtualdesktop
spec:
      rules:
        - host: virtualdesktop.localhost
          http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                  service:
                    name: headless-vnc
                    port:
                      number: 6901
